# Crimson-Desert-Online-Modification

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Install_DLL.bat  LEGAL.md  LICENSE  Launch_CDMultiplayer.bat  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
client/: CMakeLists.txt
client/src/: dllmain.cpp  session.cpp  session.h
client/src/game/: memory.cpp  memory.h  offsets.h  scanner.cpp  scanner.h
client/src/hooks/: render_hook.cpp  render_hook.h
client/src/inventory/: inventory_hook.cpp  inventory_hook.h
client/src/net/: client.cpp  client.h  protocol.cpp  protocol.h
client/src/proxy/: dxgi.def  dxgi_proxy.cpp  dxgi_proxy.h
client/src/sync/: combat_sync.cpp  combat_sync.h  cutscene_sync.cpp  cutscene_sync.h  player_sync.cpp  player_sync.h  puzzle_sync.cpp  puzzle_sync.h
client/src/ui/: modal.cpp  modal.h
client/src/util/: log.cpp  log.h
docs/: architecture.md  protocol.md  setup.md
server/: config.example.json  package-lock.json  package.json  tsconfig.json
server/src/: admin.ts  config.ts  index.ts  logger.ts  manager.ts  protocol.ts  puzzle.ts  room.ts  state.ts
